<resources>
    <string name="welcome">Together \nwe can end \nhunger</string>
    <string name="app_name">Nice Food</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="about">About Us</string>
    <string name="history">History</string>
    <string name="aboutus">Food donation is a noble act of giving food to those in need. It helps address
        the issue of hunger and malnutrition in society. There are several organizations and initiatives
        dedicated to food donation that work towards reducing food waste and ensuring that surplus food
        reaches those who need it the most.</string>
    <string name="donate">Donate</string>
    <string name="message">Message</string>
    <string name="create_new">Not Registered! Click here to Register</string>
    <string name="not_register">Already Registered?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>

    <string name="donor_name">Donor Name</string>
    <string name="food_name">Food Items</string>
    <string name="description">Description</string>


    <string name="foodmap">Food Map</string>
    <string name="mypin">My Pins</string>

    <string name="receiver_name">Receiver Name</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete">Delete</string>
    <string name="your_name">Your Name</string>
    <string name="type_here">Type here...</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <string name="you_have_tw">You have two hands \none to help yourself,\nthe second to help others.</string>
    <string name="if_you_cant">If you cant feed a hundred people,\n then just feed one.</string>
    <string name="giving_is_n">Giving is not just about\n making a donation, it is about\n making a difference.</string>
    <string name="be_the_chan">Be the change you want to\n see in this world.</string>

    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In:</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login">LogIn</string>
    <string name="horizontal_line">--------------</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="sign_in_instead">Sign in instead</string>
</resources>

