<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:gravity="center"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="20dp"
            android:textSize="27sp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/et_style"
            android:backgroundTint="@color/white"
            android:padding="@dimen/ed_padding"
            android:hint="@string/name"
            android:textSize="18sp"
            android:inputType="textNoSuggestions"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/et_style"
            android:backgroundTint="@color/white"
            android:padding="@dimen/ed_padding"
            android:layout_marginTop="18dp"
            android:hint="@string/prompt_email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/et_style"
            android:backgroundTint="@color/white"
            android:padding="@dimen/ed_padding"
            android:inputType="phone"
            android:layout_marginTop="18dp"
            android:hint="@string/mobile_number"
            android:textSize="18sp"
            android:maxLength="13"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/et_style">

            <EditText
                android:id="@+id/password"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="@dimen/ed_padding"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/show_hide_password"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha=".5"/>

        </RelativeLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/button"
            android:padding="14dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_instead"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:textSize="18sp"
            android:textColor="@color/blue"/>

    </LinearLayout>

</RelativeLayout>